[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/progress_back.png" type="Texture" id=1]
[ext_resource path="res://Assets/progress_fill.png" type="Texture" id=2]
[ext_resource path="res://Assets/lvl_up.png" type="Texture" id=3]
[ext_resource path="res://Assets/lvl_up_hover.png" type="Texture" id=4]
[ext_resource path="res://Scripts/lvl_up.gd" type="Script" id=5]
[ext_resource path="res://Assets/Inventory/background_bigger.png" type="Texture" id=6]
[ext_resource path="res://Assets/int.png" type="Texture" id=7]
[ext_resource path="res://Assets/str.png" type="Texture" id=8]
[ext_resource path="res://Assets/str_pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/dex.png" type="Texture" id=10]
[ext_resource path="res://Assets/dex_pressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/int_pressed.png" type="Texture" id=12]
[ext_resource path="res://Assets/mana_bar_empty.png" type="Texture" id=13]
[ext_resource path="res://Assets/mana_bar_full.png" type="Texture" id=14]
[ext_resource path="res://Assets/hp_under.png" type="Texture" id=15]
[ext_resource path="res://Assets/hp_fill.png" type="Texture" id=16]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=17]
[ext_resource path="res://Scripts/EquipmentSlots.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=19]
[ext_resource path="res://Scripts/GridBackPack.gd" type="Script" id=20]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 17 )

[node name="enemy_counter" type="Label" parent="."]
margin_left = 900.0
margin_top = 10.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 8
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enemies left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="."]
margin_left = 990.0
margin_top = 10.0
margin_right = 1010.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_hp" type="Label" parent="."]
margin_left = 25.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_num" type="Label" parent="."]
margin_left = 50.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "300"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_visual" type="TextureProgress" parent="."]
margin_left = 80.0
margin_top = 5.0
margin_right = 160.0
margin_bottom = 25.0
max_value = 300.0
value = 300.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo" type="Label" parent="."]
margin_left = 200.0
margin_top = 10.0
margin_right = 265.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo_num" type="Label" parent="."]
margin_left = 320.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl_progress" type="TextureProgress" parent="."]
margin_left = 377.0
margin_top = 6.0
margin_right = 627.0
margin_bottom = 30.0
max_value = 250.0
step = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl_Label" type="Label" parent="lvl_progress"]
margin_left = 258.0
margin_top = 4.0
margin_right = 282.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "lvl:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana_progress" type="TextureProgress" parent="."]
margin_left = 377.0
margin_top = 38.0
margin_right = 627.0
margin_bottom = 48.0
max_value = 500.0
value = 500.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana_value" type="Label" parent="mana_progress"]
margin_left = 258.0
margin_top = -3.0
margin_right = 298.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl" type="Label" parent="."]
margin_left = 660.0
margin_top = 10.0
margin_right = 684.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl_up" type="TextureButton" parent="."]
visible = false
margin_left = 338.0
margin_top = 5.0
margin_right = 356.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gui_container" type="MarginContainer" parent="."]
visible = false
margin_left = 162.933
margin_top = 61.2045
margin_right = 853.933
margin_bottom = 289.204
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_color" type="Panel" parent="gui_container"]
modulate = Color( 0.854902, 0.615686, 0.196078, 0.301961 )
show_behind_parent = true
margin_right = 691.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stat_inv_margin_container" type="MarginContainer" parent="gui_container"]
margin_right = 691.0
margin_bottom = 227.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="stat_inv_container" type="HBoxContainer" parent="gui_container/stat_inv_margin_container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 691.0
margin_bottom = 227.0

[node name="stat_GUI" type="VBoxContainer" parent="gui_container/stat_inv_margin_container/stat_inv_container"]
margin_right = 229.0
margin_bottom = 187.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="stat_screen" type="HBoxContainer" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI"]
margin_right = 151.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dex" type="TextureButton" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen"]
margin_right = 32.0
margin_bottom = 50.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="dex" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen/dex"]
margin_left = 2.0
margin_top = 34.0
margin_right = 32.0
margin_bottom = 48.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="int" type="TextureButton" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 12 )

[node name="intel" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen/int"]
margin_left = 2.0
margin_top = 34.0
margin_right = 32.0
margin_bottom = 48.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="str" type="TextureButton" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 50.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="stren" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen/str"]
margin_left = 2.0
margin_top = 34.0
margin_right = 32.0
margin_bottom = 48.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen"]
margin_left = 108.0
margin_top = 18.0
margin_right = 151.0
margin_bottom = 32.0
text = "Power:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen/power"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loot_modifiers" type="HBoxContainer" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI"]
margin_top = 54.0
margin_right = 131.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quantity" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/loot_modifiers"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
text = "quantity:"

[node name="quant_num" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/loot_modifiers"]
margin_left = 60.0
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quality" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/loot_modifiers"]
margin_left = 72.0
margin_top = 5.0
margin_right = 119.0
margin_bottom = 19.0
text = "quality:"

[node name="qual_num" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/loot_modifiers"]
margin_left = 123.0
margin_top = 5.0
margin_right = 131.0
margin_bottom = 19.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_stats" type="HBoxContainer" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI"]
margin_top = 83.0
margin_right = 229.0
margin_bottom = 187.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="dmg" type="VBoxContainer" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats"]
margin_right = 120.0
margin_bottom = 104.0
rect_min_size = Vector2( 120, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dmg_type" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg"]
margin_right = 60.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "dmg type"

[node name="fire" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 32.0
text = "fire"

[node name="fire" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg/fire"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cold" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg"]
margin_top = 36.0
margin_right = 120.0
margin_bottom = 50.0
text = "cold"

[node name="cold" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg/cold"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lightning" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg"]
margin_top = 54.0
margin_right = 120.0
margin_bottom = 68.0
text = "lightning"

[node name="lightning" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg/lightning"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="physical" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg"]
margin_top = 72.0
margin_right = 120.0
margin_bottom = 86.0
text = "physical"

[node name="physical" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg/physical"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
text = "0"

[node name="poison" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg"]
margin_top = 90.0
margin_right = 120.0
margin_bottom = 104.0
text = "poison"

[node name="poison" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/dmg/poison"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="res" type="VBoxContainer" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats"]
margin_left = 124.0
margin_right = 229.0
margin_bottom = 104.0
rect_min_size = Vector2( 105, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resistances" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res"]
margin_right = 105.0
margin_bottom = 14.0
text = "resistances"

[node name="fire" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res"]
margin_top = 18.0
margin_right = 105.0
margin_bottom = 32.0
text = "fire"

[node name="fire" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res/fire"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cold" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res"]
margin_top = 36.0
margin_right = 105.0
margin_bottom = 50.0
text = "cold"

[node name="cold" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res/cold"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0

[node name="lightning" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res"]
margin_top = 54.0
margin_right = 105.0
margin_bottom = 68.0
text = "lightning"

[node name="lightning" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res/lightning"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0

[node name="physical" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res"]
margin_top = 72.0
margin_right = 105.0
margin_bottom = 86.0
text = "physical"

[node name="physical" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res/physical"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poison" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res"]
margin_top = 90.0
margin_right = 105.0
margin_bottom = 104.0
text = "poison"

[node name="poison" type="Label" parent="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/item_stats/res/poison"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="gui_container/stat_inv_margin_container/stat_inv_container"]
margin_left = 233.0
margin_right = 233.0
margin_bottom = 217.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryBase" type="Panel" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory"]
anchor_top = 0.123
anchor_bottom = 0.123
margin_left = 38.6989
margin_top = -7.52732
margin_right = 428.699
margin_bottom = 168.473
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentSlots" type="Panel" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory/InventoryBase"]
self_modulate = Color( 0.262745, 0.262745, 0.262745, 1 )
margin_left = 214.0
margin_top = 7.0
margin_right = 384.0
margin_bottom = 162.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WEAPON" type="Panel" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory/InventoryBase/EquipmentSlots"]
margin_left = 11.5546
margin_top = 77.677
margin_right = 47.5546
margin_bottom = 139.677
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CHARACTER" type="Panel" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory/InventoryBase/EquipmentSlots"]
margin_left = 115.057
margin_top = 35.0
margin_right = 160.057
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="POWERUP" type="Panel" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory/InventoryBase/EquipmentSlots"]
margin_left = 11.0
margin_top = 35.0
margin_right = 47.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BOOTS" type="Panel" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory/InventoryBase/EquipmentSlots"]
margin_left = 58.0
margin_top = 84.722
margin_right = 103.0
margin_bottom = 129.722

[node name="GLOVES" type="Panel" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory/InventoryBase/EquipmentSlots"]
margin_left = 58.0
margin_top = 35.0
margin_right = 103.0
margin_bottom = 77.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridBackPack" type="TextureRect" parent="gui_container/stat_inv_margin_container/stat_inv_container/Inventory/InventoryBase"]
self_modulate = Color( 0.443137, 0.443137, 0.443137, 1 )
margin_left = 14.5085
margin_top = 38.117
margin_right = 206.509
margin_bottom = 135.117
texture = ExtResource( 6 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl_preview" type="HBoxContainer" parent="."]
margin_left = 700.0
margin_right = 872.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next Level" type="Label" parent="lvl_preview"]
margin_top = 13.0
margin_right = 72.0
margin_bottom = 27.0
text = "Next Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lvl_name" type="Label" parent="lvl_preview/Next Level"]
margin_left = 75.0
margin_right = 115.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points_container" type="VBoxContainer" parent="."]
visible = false
margin_left = 428.0
margin_top = 60.0
margin_right = 577.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points" type="Label" parent="points_container"]
margin_right = 149.0
margin_bottom = 14.0
text = "Points:"

[node name="points_num" type="Label" parent="points_container/points"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins" type="Label" parent="."]
margin_left = 25.0
margin_top = 40.0
margin_right = 65.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coins:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins_num" type="Label" parent="coins"]
margin_left = 45.0
margin_right = 85.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="lvl_up" to="lvl_up" method="_on_lvl_up_pressed"]
[connection signal="pressed" from="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen/dex" to="." method="_on_dex_pressed"]
[connection signal="pressed" from="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen/int" to="." method="_on_int_pressed"]
[connection signal="pressed" from="gui_container/stat_inv_margin_container/stat_inv_container/stat_GUI/stat_screen/str" to="." method="_on_str_pressed"]
